feat: real docs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,28 +7,18 @@
 @import 'tailwindcss/utilities.css' layer(utilities);
 
 @theme {
-    /* --font-sans: 'Merriweather'; */
+    --font-sans: 'Merriweather';
     --font-mono: 'Fira Mono';
-    /* --color-accent-50: var(--color-red-50);
-    --color-accent-100: var(--color-red-100);
-    --color-accent-200: var(--color-red-200);
-    --color-accent-300: var(--color-red-300);
-    --color-accent-400: var(--color-red-400);
-    --color-accent-500: var(--color-red-500);
-    --color-accent-600: var(--color-red-600);
-    --color-accent-700: var(--color-red-700);
-    --color-accent-800: var(--color-red-800);
-    --color-accent-900: var(--color-red-900);
-    --color-accent-950: var(--color-red-950);
-    --color-gray-50: var(--color-zinc-50);
-    --color-gray-100: var(--color-zinc-100);
-    --color-gray-200: var(--color-zinc-200);
-    --color-gray-300: var(--color-zinc-300);
-    --color-gray-400: var(--color-zinc-400);
-    --color-gray-500: var(--color-zinc-500);
-    --color-gray-600: var(--color-zinc-600);
-    --color-gray-700: var(--color-zinc-700);
-    --color-gray-800: var(--color-zinc-800);
-    --color-gray-900: var(--color-zinc-900);
-    --color-gray-950: var(--color-zinc-950); */
+    --color-accent-200: #feb3a6;
+    --color-accent-600: #c90e00;
+    --color-accent-900: #640300;
+    --color-accent-950: #460b05;
+    --color-gray-100: #f9f5f5;
+    --color-gray-200: #f3ecea;
+    --color-gray-300: #c8c0be;
+    --color-gray-400: #978784;
+    --color-gray-500: #635451;
+    --color-gray-700: #423432;
+    --color-gray-800: #302321;
+    --color-gray-900: #1d1715;
 }
